# pytest-example

./: pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
scripts/: test.sh
src/app/: settings.py
src/core/: services.py
src/core/tests/: test_exponent_service.py
